# sql

./: .gitignore
_done/_mysql-kmgt/: .gitignore  README.md  mysql-kmgt.cabal  stack.yaml
_done/_mysql-kmgt/src/: Commands.hs  IO.hs  Lib.hs  Models.hs
_done/_mysql-kmgt/src/Tests/: TestData.hs  Tests.hs
_done/_mysql-kmgt/test/: doctests.hs
_done/_mysql_01/wk/: stack.yaml  wk.cabal
_done/_mysql_01/wk/.stack-work/install/x86_64-linux/lts-8.9/8.0.2/flag-cache/: wk-0.1.0.0-L54XxzxCA5D1edF8IbyN6E
_done/_mysql_01/wk/src/: Lib.hs
_done/stack/_mysql-haskell/: README.md  mysql.cabal  stack.yaml
_done/stack/_mysql-haskell/.stack-work/install/x86_64-linux/lts-8.8/8.0.2/flag-cache/: attoparsec-0.13.1.0-5KxDCMb9615F4QsycgVv5I  binary-0.8.4.1-KsJCYRmffmSBhXWg7EMk6a  binary-ieee754-0.1.0.0-8C8Abd5UM302dI3wsYXkVN  binary-parsers-0.2.3.0-9w7yePxNv83C43eoaaFhlP  blaze-builder-0.4.0.2-KtXmYzkb0Hs3F2ipPmW9kv  blaze-textual-0.2.1.0-HmdVKn75aPb9TZMDwDweAY  hashable-1.2.6.0-48DohmKAuAtCUIhw95PFsB  io-streams-1.3.6.1-LduYmFSORXI5bs0qin5iSp  mysql-0.1.0.0-8TpjZPMIjL48gJmC25PG3p  mysql-0.1.0.0-8wYEEapBD7zBQidV7kUCEp  mysql-0.1.0.0-ByBIObtmhXtG1kpanFSPD9  mysql-haskell-0.8.0.0-6bWgebbcA42DZwBjs1zAl  (+7 more)
_done/stack/_mysql-haskell/src/: Lib.hs
_done/stack/_mysql01/: mysql.cabal
_done/stack/_mysql01/app/: Main.hs
_done/stack/_mysql02/: mysql.cabal  stack.yaml
_done/stack/_mysql02/app/: Main.hs
_done/stack/_mysql_03/: mysql.cabal
_done/stack/_mysql_03/src/: Lib.hs
_done/stack/_persistent01/: README.md  persistent.cabal
_done/stack/_persistent01/src/: Lib.hs
_done/stack/_persistent02/: persistent.cabal  stack.yaml
_done/stack/_test01/: test.cabal
_done/stack/_test01/src/: Lib.hs
_done/stack/prs/: prs.cabal  stack.yaml
_done/stack/test-kmgt/: README.md  test-kmgt.cabal
mysql/mysql-kmgt/: .gitignore  README.md  mysql-kmgt.cabal
mysql/mysql-kmgt/app/: Main.hs
mysql/mysql-kmgt/app/_old/: Main_170711.hs  _Main_170620.hs
mysql/mysql-kmgt/sql/: copy.sql  show.sql  source.sql  test.sql
mysql/mysql-kmgt/sql/db/: TestDB.sql
mysql/mysql-kmgt/sql/table/: StudentTb.sql  TeacherTb.sql  TestTb.sql  UserTb.sql
mysql/mysql-kmgt/sql/table/int/: FriendFriendTb.sql  ParentChildTb.sql  SiblingElderYoungerTb.sql  TeacherStudentTb.sql
mysql/mysql-kmgt/sql/table/ref/: GenderTb.sql  StudentClassTb.sql  SubjectTb.sql
mysql/mysql-kmgt/src/: Command.hs  Lib.hs  Model.hs
mysql/mysql-kmgt/src/Command/: CommandBase.hs  FromFormat.hs  FromInfoFormat.hs  FromInputString.hs  FromSubQuery.hs  FromValue.hs  Parse.hs
mysql/mysql-kmgt/src/Command/FromFormat/: ToFormatInfo.hs
mysql/mysql-kmgt/src/Lib/: ToQuery.hs  ToValueList.hs
mysql/mysql-kmgt/src/Lib/ToQuery/: ToDmlClause.hs  ToString.hs  ToWhereClause.hs
mysql/mysql-kmgt/src/Lib/ToValueList/: ToQueryMaybe.hs
mysql/mysql-kmgt/src/Model/: Format.hs  InputInfo.hs  ModelBase.hs  Query.hs  SubQuery.hs  Value.hs
mysql/mysql-kmgt/test/: doctest.hs  inputTest.txt  updateTest.txt
(+1517 files in other folders)
