name:                mysql-kmgt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mysql-kmgt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Model
                     , Model.ModelBase
                     , Model.InputInfo
                     , Model.SubQuery
                     , Model.Format
                     , Model.Query
                     , Model.Value

                     , Command
                     , Command.CommandBase
                     , Command.Parse
                     , Command.FromInfoFormat
                     , Command.FromSubQuery
                     , Command.FromFormat
                     , Command.FromFormat.ToFormatInfo
                     , Command.FromInputString
                     , Command.FromValue

                     , Lib
                     , Lib.ToQuery
                     , Lib.ToQuery.ToDmlClause
                     , Lib.ToQuery.ToWhereClause
                     , Lib.ToQuery.ToString
                     , Lib.ToValueList
                     , Lib.ToValueList.ToQueryMaybe

  build-depends:       base >= 4.7 && < 5
                     , mysql
                     , mysql-simple
                     , safe-exceptions

                     , parsec
                     , text
                     , time
                     , fgl
                     , hoogle
                     , ghc-mod
                     , hlint
  default-language:    Haskell2010

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mysql-kmgt
                     , mysql-simple
                     , safe-exceptions
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  build-depends:       base
                     , mysql-kmgt
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--test-suite mysql-kmgt-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , mysql-kmgt
--                     , doctest
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mysql-kmgt
